# TailorResume

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: experience.example.yaml
data/examples/: google_swe_2026.txt  meta_de_2026.txt  microsoft_ds.txt  openai_mle_2026.txt  sample_jd.txt
data/guidelines/: exemplary_bullets.yaml  resume_rules.md  resume_structures.yaml
data/templates/: resume.tex.j2
data/templates/sections/: education.tex.j2  experience.tex.j2  projects.tex.j2  skills.tex.j2
docs/superpowers/specs/: 2026-03-28-resume-quality-intelligence-design.md
src/jobplanner/: __init__.py  __main__.py  app.py  cli.py  config.py  pipeline.py
src/jobplanner/bank/: __init__.py  loader.py  locator.py  schema.py  suggestions.py  updater.py
src/jobplanner/checker/: __init__.py  ats.py  critic.py  proofreader.py
src/jobplanner/latex/: __init__.py  compiler.py  renderer.py
src/jobplanner/llm/: __init__.py  base.py  claude.py  factory.py  openai_client.py
src/jobplanner/market/: __init__.py  report.py  tracker.py
src/jobplanner/parser/: __init__.py  jd_parser.py
src/jobplanner/tailor/: __init__.py  agent.py  enrichment.py  length_gate.py  prompts.py  validator.py
tests/: conftest.py  test_app_pdf_preview.py  test_app_smoke.py  test_app_visual.py  test_critic.py  test_enrichment.py  test_length_gate.py  test_locator.py  test_orphan_detector.py  test_renderer.py  test_suggestions_conflicts.py  test_tracker.py  test_validator.py
tests/fixtures/: __init__.py  ui_fixture.py
